# deepx-rpi5-examples

./: LICENSE  README.md  auto-install.sh
basic_examples/classification/: imagenet-classification.py
basic_examples/deepx-official-examples/: CMakeLists.txt  LICENSE  README.md
basic_examples/deepx-official-examples/cmake/: dxapp.cfg.cmake  dxapp.function.cmake  toolchain.aarch64.cmake  toolchain.x86_64.cmake
basic_examples/deepx-official-examples/demos/classification/: CMakeLists.txt  classification_async.cpp  classification_sync.cpp  imagenet_classification.cpp  imagenet_classification_demo.cpp
basic_examples/deepx-official-examples/demos/demo_utils/: bbox.cpp  display.cpp  image.cpp  nms.cpp  nxp.cpp  segmentation.cpp  yolo.cpp  yolo_cfg.cpp
basic_examples/deepx-official-examples/demos/demo_utils/include/: bbox.h  display.h  image.h  nms.h  nxp_util.h  segmentation.h  yolo.h
basic_examples/deepx-official-examples/demos/denoiser/: CMakeLists.txt  dncnn.cpp
basic_examples/deepx-official-examples/demos/object_det_and_seg/: CMakeLists.txt  yolo_and_segmentation.cpp
basic_examples/deepx-official-examples/demos/object_detection/: CMakeLists.txt  od.cpp  yolo_1channel.cpp  yolo_1channel_nxp.cpp  yolo_multi_channels.cpp
basic_examples/deepx-official-examples/demos/object_detection/include/: od.h
basic_examples/deepx-official-examples/demos/pose_estimation/: CMakeLists.txt  yolo_pose.cpp
basic_examples/deepx-official-examples/demos/segmentation/: CMakeLists.txt  segmentation.cpp
basic_examples/deepx-official-examples/lib/common/: labels.hpp  objects.hpp
basic_examples/deepx-official-examples/lib/common/label/: bdd_label.hpp  cifar_label.hpp  cityscape_label.hpp  coco_label.hpp  faceid_label.hpp  imagenet_label.hpp  pascalvoc_label.hpp  tinyimagenet_label.hpp
basic_examples/deepx-official-examples/lib/utils/: box_decode.hpp  color_table.hpp  common_util.hpp  json_validator.hpp  nms.hpp  videostream.hpp
basic_examples/denoiser/: dncnn-denoiser.py
basic_examples/object-detection/: yolo-object-detection.py
basic_examples/pose-estimation/: yolo-pose-estimation.py
basic_examples/segmentation/: object-det-and-seg.py  segmentation.py
community_projects/: community_projects.md
community_projects/template_example/: README.md  download_resources.sh  template_example.py
cpp_examples/: CMakeLists.txt  README.md  setup.sh  start.sh
cpp_examples/advanced/: CMakeLists.txt  multi_channel_demo.cpp  osnet_reid_demo.cpp  people_tracking_demo.cpp  smart_traffic_demo.cpp  store_queue_demo.cpp  trespassing_demo.cpp
cpp_examples/async_example/: CMakeLists.txt  yolov8_async_demo.cpp
cpp_examples/classification/: CMakeLists.txt  efficientnet_demo.cpp  mobilenet_demo.cpp  yolo26cls_demo.cpp
cpp_examples/common/: config_loader.cpp  config_loader.h  demo_runner.cpp  demo_runner.h  fps_counter.cpp  fps_counter.h  input_source.cpp  input_source.h  label_sets.h  ppu_decode.cpp  ppu_decode.h  reid_utils.cpp  reid_utils.h  sdk_utils.cpp  sdk_utils.h  seg_decode.cpp  seg_decode.h  tracker.cpp  tracker.h  visualizer.cpp  visualizer.h  zone_utils.cpp  zone_utils.h
cpp_examples/configs/: body_pose_demo.json  deeplabv3_demo.json  efficientnet_demo.json  face_detection_demo.json  face_emotion_demo.json  hand_landmark_demo.json  mask_detection_demo.json  mobilenet_demo.json  multi_channel_demo.json  osnet_reid_demo.json  people_tracking_demo.json  ppe_detection_demo.json  scrfd_demo.json  smart_traffic_demo.json  store_queue_demo.json  trespassing_demo.json  yolo26cls_demo.json  yolo26seg_demo.json  yolov11_demo.json  yolov11_ppu_demo.json  yolov5_demo.json  yolov5_ppu_demo.json  yolov8_async_demo.json  yolov8_demo.json  yolov8_ppu_demo.json  yolov8seg_demo.json
cpp_examples/face/: CMakeLists.txt  face_detection_demo.cpp  face_emotion_demo.cpp  scrfd_demo.cpp
cpp_examples/object_detection/: CMakeLists.txt  mask_detection_demo.cpp  ppe_detection_demo.cpp  yolov11_demo.cpp  yolov5_demo.cpp  yolov8_demo.cpp
cpp_examples/pose_estimation/: CMakeLists.txt  body_pose_demo.cpp  hand_landmark_demo.cpp
cpp_examples/ppu/: CMakeLists.txt  yolov11_ppu_demo.cpp  yolov5_ppu_demo.cpp  yolov8_ppu_demo.cpp
cpp_examples/segmentation/: CMakeLists.txt  deeplabv3_demo.cpp  yolo26seg_demo.cpp  yolov8seg_demo.cpp
docs/: basic-examples.md  cpp-examples.md  install-raspberry-pi5.md  python-examples.md
python_examples/: README.md  config.py  config.yml  config_loader.py  download.sh  launcher.py  requirements.txt  start.sh  tui_input.py
python_examples/advanced/: __init__.py  hand_landmark_demo.py  multi_channel_demo.py  people_tracking_demo.py  smart_traffic_demo.py  store_queue_analysis_demo.py  trespassing_demo.py
python_examples/async_example/: yolov8_async_demo.py
python_examples/classification/: yolov26cls_demo.py
python_examples/object_detection/: scrfd_demo.py  yolov10_demo.py  yolov11_demo.py  yolov12_demo.py  yolov26_demo.py  yolov26obb_demo.py  yolov26pose_demo.py  yolov5_demo.py  yolov5face_demo.py  yolov5pose_demo.py  (+4 more)
(+21 files in other folders)
